now fixed, showing well on mobile

--- a/Dashboard/dashboard.css
+++ b/Dashboard/dashboard.css
@@ -523,8 +523,8 @@ main {
     }
 
     .round{
-        width: 2.3rem;
-        height: 2.3rem;
+        width: 2.1rem;
+        height: 2.1rem;
     }
 
     .footer-inner .home,
